--- a/package.json
+++ b/package.json
@@ -1,26 +1,25 @@
 {
   "version": "0.0.3",
   "scripts": {
-    "vite": "vite --host",
-    "dev": "npm run vite"
+    "vite": "vite",
+    "dev": "npm run vite",
     "build": "vite build",
-    "serve": "vite preview --host",
-    "
+    "preview": "concurrently \"npm:build\" \"vite preview --host\""
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
-    "eslint": "^8.30.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "postcss": "^8.4.19",
-    "prettier": "^2.8.1",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.2",
     "prettier-plugin-css-order": "^1.3.0",
     "prettier-plugin-jsdoc": "^0.4.2",
     "prettier-plugin-organize-attributes": "^0.0.5",
     "prettier-plugin-organize-imports": "^3.2.1",
     "prettier-plugin-style-order": "^0.2.2",
     "prettier-plugin-tailwindcss": "^0.2.1",
-    "tailwindcss": "^3.2.3",
-    "vite": "^4.0.3"
+    "tailwindcss": "^3.2.4",
+    "vite": "^4.0.4"
   }
 }
