--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
   "name": "template-frontend",
   "private": true,
-  "version": "0.0.2",
+  "version": "0.0.3",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite build && vite preview",
+    "preview": "npm run build && vite preview",
     "lint": "npx eslint src",
     "lint:fix": "npm run lint -- --fix",
     "prettier": "npx prettier src --check",
     "prettier:fix": "npm run prettier -- --write",
-    "format": "npm run prettier:fix && npm run lint:fix"
+    "format": "npm run prettier:fix && npm run lint:fix",
+    "gh-deploy": "npm run build && gh-pages -d dist"
   },
   "devDependencies": {
     "@new-objects/eslint-config": "^0.0.3",
     "@new-objects/prettier-config": "^0.0.2",
     "autoprefixer": "^10.4.16",
+    "gh-pages": "^6.0.0",
     "husky": "^8.0.3",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
@@ -30,5 +32,5 @@
   "bugs": {
     "url": "https://github.com/new-objects/template-frontend/issues"
   },
-  "homepage": "https://github.com/new-objects/template-frontend#readme"
+  "homepage": "https://new-objects.github.io/template-frontend"
 }
