--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prettier": "npx prettier src --check",
     "prettier:fix": "npm run prettier -- --write",
     "format": "npm run prettier:fix && npm run lint:fix",
-    "gh-deploy": "npm run build && gh-pages -d dist"
+    "gh-deploy": "npm run build:gh-pages && gh-pages -d dist"
   },
   "devDependencies": {
     "@new-objects/eslint-config": "^0.0.3",
