Updating gh-pages build.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "template-frontend",
   "private": true,
-  "version": "0.0.3",
+  "version": "0.0.4",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -20,6 +20,7 @@
     "@new-objects/prettier-config": "^0.0.2",
     "autoprefixer": "^10.4.16",
     "cross-env": "^7.0.3",
+    "gh-pages": "^6.0.0",
     "husky": "^8.0.3",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
