--- a/.github/workflows/auto-dependabot.yml
+++ b/.github/workflows/auto-dependabot.yml
@@ -2,22 +2,23 @@ name: Automerge dependabot PRs
 
 on:
   pull_request:
-    branches: [ main ]
+    branches: [main]
   workflow_dispatch:
     inputs:
       pr-number:
+        description: 'PR number'
         required: true
 
 jobs:
   unit-test:
     runs-on: ubuntu-latest
     steps:
-      - name: "PLACEHOLDER"
+      - name: 'PLACEHOLDER'
         run: echo "PLACEHOLDER for a future unit-test"
-        
+
   auto-merge:
     name: 🤖 Automerge dependa[bot] PRs
-    needs: [ unit-test ]
+    needs: [unit-test]
     if: ${{ github.actor == 'dependabot[bot]' }}
     runs-on: ubuntu-latest
     timeout-minutes: 10
